# CodexSkills

./: .gitignore  AGENTS.md  CLAUDE.md  package.json
.claude/: launch.json  settings.local.json
.obsidian/: workspace.json
application-trackers/: Dashboard.md  README.md  applications.md  codex-automations.md  job-intake.md  linkedin-engineer-batches.md  linkedin-recruiter-batches.md  manual-application-handoffs.txt  notion-config.md  outcomes.jsonl  outreach-prospects.md  scoring-profile.json
application-visualizer/: README.md  index.html  package-lock.json  package.json
docs/: dual-agent-operating-model.md
generic-resume/: README.md  resume.tex
handoffs/: README.md
housing-trackers/: listings.md  notion-config.md  power-rankings.md  run-health.json
housing-visualizer/: README.md  index.html  package-lock.json  package.json
mcp/: run_nodriver_mcp.py
mcp/nodriver_server/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py
mcp/nodriver_server/nodriver_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: README.md  build_pipeline_metrics.py  calibration_report.py  check.sh  log_outcome.py  mirror_to_sqlite.py  query_tracker.py  tailor.py  tailor_greenhouse_batch3.py  tailor_greenhouse_batch4.py  tailor_greenhouse_batch5.py  tailor_greenhouse_batch6.py  tailor_intake_2026_05_02.py  tailor_intake_2026_05_02_late.py  tailor_intake_2026_05_03.py  tailor_intake_2026_05_03_0200.py  tailor_intake_2026_05_03_0300.py  tailor_intake_2026_05_03_0400.py  tailor_intake_2026_05_03_0500.py  tracker_table.py  (+2 more)
(+689 files in other folders)
