[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodriver-mcp-server"
version = "0.1.0"
description = "MCP Server for nodriver-based browser automation and network interception"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "nodriver>=0.35",
]

[project.scripts]
nodriver-mcp-server = "nodriver_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodriver_server*"]

[tool.setuptools.package-data]
nodriver_server = ["*.txt", "*.md"]
